--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,21 @@
-[project]
-name = "example-1"
+[tool.poetry]
+name = "urbanbloom"
 version = "0.1.0"
-description = "example 1 for urban-bloom"
+description = "A ranking model for metropolitan area attractiveness"
 authors = [
-    {name = "Steven Kotwal",email = "stevenkotwal@ufl.edu"},
-    {name = "Nathan McTear",email = "nmctear@ufl.edu"},
-    {name = "Luke Kutz-Pears",email = "lukekutzpears@ufl.edu"}
+    "Steven Kotwal <stevenkotwal@ufl.edu>",
+    "Nathan McTear <nmctear@ufl.edu>",
+    "Luke Kutz-Pears <lukekutzpears@ufl.edu>"
 ]
-license = {text = "MIT"}
+license = "MIT"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-]
 
+[tool.poetry.dependencies]
+python = ">=3.10"
+pandas = "^2.2.2"
+scikit-learn = "^1.5.0"
+matplotlib = "^3.9.0"
+seaborn = "^0.13.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
