--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 matplotlib = "^3.9.0"
 seaborn = "^0.13.2"
+openpyxl = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
