--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ matplotlib = "^3.9.0"
 seaborn = "^0.13.2"
 openpyxl = "^3.1.0"
 notebook = "^7.4.4"
+click = "^8.2.1"
+
+[tool.poetry.scripts]
+urbanbloom = "urbanbloom:cli"
+ubloom = "urbanbloom:cli"
+urban = "urbanbloom:cli"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
